--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"@types/react-dom": "18.0.9",
 		"@typescript-eslint/eslint-plugin": "5.46.0",
 		"@typescript-eslint/parser": "5.46.0",
+		"@wcpos/eslint-config": "^1.0.19",
 		"@wordpress/babel-plugin-makepot": "5.6.0",
 		"@wordpress/env": "5.7.0",
 		"autoprefixer": "10.4.13",
@@ -111,5 +112,8 @@
 		"webpack-livereload-plugin": "3.0.2",
 		"wp-hookdoc": "0.2.0"
 	},
-	"packageManager": "yarn@3.2.1"
+	"packageManager": "yarn@3.2.1",
+	"eslintConfig": {
+		"extends": "@wcpos/eslint-config"
+	}
 }
