--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -18,6 +18,7 @@
     "@reach/tooltip": "0.18.0",
     "@tanstack/react-query": "^4.20.4",
     "@transifex/native": "^5.0.2",
+    "@transifex/react": "^5.0.2",
     "@wordpress/api-fetch": "6.20.0",
     "@wordpress/element": "5.0.0",
     "@wordpress/url": "3.24.0",
@@ -29,12 +30,12 @@
     "react-error-boundary": "3.1.4"
   },
   "devDependencies": {
-    "@babel/core": "7.20.5",
+    "@babel/core": "7.20.7",
     "@babel/plugin-transform-runtime": "7.19.6",
     "@babel/preset-env": "7.20.2",
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
-    "@babel/runtime": "7.20.6",
+    "@babel/runtime": "7.20.7",
     "@svgr/webpack": "6.5.1",
     "@tanstack/react-query-devtools": "^4.20.4",
     "@transifex/cli": "^5.0.2",
@@ -42,9 +43,9 @@
     "@types/lodash": "4.14.191",
     "@types/react": "18.0.26",
     "@types/react-beautiful-dnd": "13.1.3",
-    "@types/react-dom": "18.0.9",
-    "@typescript-eslint/eslint-plugin": "5.47.0",
-    "@typescript-eslint/parser": "5.47.0",
+    "@types/react-dom": "18.0.10",
+    "@typescript-eslint/eslint-plugin": "5.47.1",
+    "@typescript-eslint/parser": "5.47.1",
     "@wcpos/eslint-config": "*",
     "@wordpress/babel-plugin-makepot": "5.7.0",
     "@wordpress/env": "5.8.0",
