--- a/.github/workflows/wp-engine.yml
+++ b/.github/workflows/wp-engine.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Build
         run: |
           yarn install
+          composer install --no-dev
           yarn settings build
 
       - name: SSH Deploy to WP Engine
