--- a/packages/settings/tsconfig.json
+++ b/packages/settings/tsconfig.json
@@ -14,7 +14,9 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
-  }
+    "jsx": "react",
+  },
+  "include": [
+    "src"
+  ]
 }
