--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -48,6 +48,7 @@
     "autoprefixer": "10.4.13",
     "babel-loader": "9.1.0",
     "css-loader": "6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "7.2.14",
     "html-webpack-plugin": "5.5.0",
@@ -67,6 +68,7 @@
     "terser-webpack-plugin": "5.3.6",
     "typescript": "4.9.4",
     "webpack": "5.75.0",
+    "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "5.0.1",
     "webpack-livereload-plugin": "3.0.2",
     "wp-hookdoc": "0.2.0"
