--- a/packages/settings/tsconfig.json
+++ b/packages/settings/tsconfig.json
@@ -5,6 +5,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "sourceMap": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
