--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -6,18 +6,19 @@ on:
       - main
 
 jobs:
-  hookdocs:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 16
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: npm install, and build docs
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Build
         run: |
-          npm install
-          npm run build:docs
+          yarn install
+          yarn build:docs
+
       - name: Deploy to GH Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
