--- a/.github/workflows/update-pot.yml
+++ b/.github/workflows/update-pot.yml
@@ -6,30 +6,36 @@ on:
       - main
     paths:
       - '**.php'
-      - '**.js'
 
 jobs:
   update-pot:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Setup PHP with tools
         uses: shivammathur/setup-php@v2
         with:
           php-version: '7.3'
           tools: composer, wp-cli
+
       - name: Install dependencies
         run: |
           wp package install wp-cli/i18n-command:2.2.8
+
       - name: Update POT file
         run: wp i18n make-pot . languages/woocommerce-pos.pot --require=vendor/autoload.php --domain=woocommerce-pos --slug=woocommerce-pos --package-name="WooCommerce POS" --headers="{\"Report-Msgid-Bugs-To\":\"https://github.com/wcpos/woocommerce-pos/issues\"}"
       # Remove the next four lines and uncomment the last five lines once the process has been confirmed to work as desired.
-      - uses: actions/upload-artifact@v3
+
+#      - name: Upload POT file
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: woocommerce-pos.pot
+#          path: languages/woocommerce-pos.pot
+
+      - name: Commit updated POT file
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          name: woocommerce-pos.pot
-          path: languages/woocommerce-pos.pot
-    # - name: Commit updated POT file
-    #   uses: stefanzweifel/git-auto-commit-action@v4.1.1
-    #   with:
-    #     commit_message: 'chore(l10n): update languages/woocommerce-pos.pot'
-    #     file_pattern: '*.pot'
+          commit_message: 'chore(l10n): update languages/woocommerce-pos.pot'
+          file_pattern: '*.pot'
