--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,32 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Cache node modules
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
-        with:
-          # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-${{ env.cache-name }}-
-            ${{ runner.os }}-node-
-            ${{ runner.os }}-
-
-      - name: Use Node.js 12.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 12.x
-
-      - name: Npm install
-        run: npm install
+      - name: Build
+        run: |
+          yarn install
+          composer install --no-dev
 
       - name: Linting the code
-        run: npm run lint
+        run: yarn lint
         continue-on-error: true
 
       - name: Running the tests
-        run: npm run test
+        run: yarn test
