--- a/.github/workflows/wp-engine.yml
+++ b/.github/workflows/wp-engine.yml
@@ -20,11 +20,15 @@ jobs:
           composer install --no-dev
           yarn settings build
 
-      - name: SSH Deploy to WP Engine
-        uses: bowiedev/github-action-wpengine-ssh-deploy@master
-        env:
-          WPE_ENV_NAME: wcposdev
-          WPE_SSHG_KEY_PUBLIC: ${{ secrets.PUBLIC_KEY_NAME }}
-          WPE_SSHG_KEY_PRIVATE: ${{ secrets.PRIVATE_KEY_NAME }}
-          TPO_SRC_PATH: ""
-          TPO_PATH: "wp-content/plugins/woocommerce-pos"
+      - name: Deploy to WP Engine
+        uses: wpengine/github-action-wpe-site-deploy@v3
+        with:
+          # Deploy vars
+          WPE_SSHG_KEY_PRIVATE: ${{ secrets.WPE_SSHG_KEY_PRIVATE }}
+          WPE_ENV: wcposdev
+          # Deploy Options
+          SRC_PATH: "./"
+          REMOTE_PATH: "wp-content/plugins/woocommerce-pos"
+          FLAGS: -azvr --inplace --delete --exclude-from=.distignore
+#          SCRIPT: "path/yourscript.sh"
+          CACHE_CLEAR: TRUE
