--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
 		"@wordpress/babel-plugin-makepot": "5.7.0",
 		"@wordpress/env": "5.8.0",
 		"husky": "8.0.2",
+		"jsdoc": "^4.0.0",
 		"npm-run-all": "4.1.5",
+		"taffydb": "^2.7.3",
 		"wp-hookdoc": "0.2.0"
 	},
 	"packageManager": "yarn@3.2.1",
