--- a/.github/workflows/update-pot.yml
+++ b/.github/workflows/update-pot.yml
@@ -25,7 +25,7 @@ jobs:
           wp package install wp-cli/i18n-command:2.2.8
 
       - name: Update POT file
-        run: wp i18n make-pot . languages/woocommerce-pos.pot --require=vendor/autoload.php --domain=woocommerce-pos --slug=woocommerce-pos --package-name="WooCommerce POS" --headers="{\"Report-Msgid-Bugs-To\":\"https://github.com/wcpos/woocommerce-pos/issues\"}"
+        run: wp i18n make-pot . languages/woocommerce-pos.pot --domain=woocommerce-pos --slug=woocommerce-pos --package-name="WooCommerce POS" --headers="{\"Report-Msgid-Bugs-To\":\"https://github.com/wcpos/woocommerce-pos/issues\"}"
       # Remove the next four lines and uncomment the last five lines once the process has been confirmed to work as desired.
 
 #      - name: Upload POT file
