fix settings and add tests

--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -38,6 +38,7 @@
 	<rule ref="PHPCompatibilityWP"/>
 	<rule ref="WordPress-Extra"/>
 	<rule ref="WordPress-Docs"/>
+	<rule ref="WooCommerce-Core" />
 
 	<!-- Turns on the WordPress Standard -->
 	<rule ref="WordPress">
