--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "phpcompatibility/phpcompatibility-wp": "2.1.4",
     "sirbrillig/phpcs-variable-analysis": "v2.11.9",
     "squizlabs/php_codesniffer": "3.7.1",
+    "woocommerce/woocommerce-sniffs": "^0.1.3",
     "wp-coding-standards/wpcs": "2.3.0",
     "wp-phpunit/wp-phpunit": "6.1.1",
     "yoast/phpunit-polyfills": "^1.0.4"
