--- a/.github/workflows/wp-engine.yml
+++ b/.github/workflows/wp-engine.yml
@@ -29,6 +29,6 @@ jobs:
           # Deploy Options
           SRC_PATH: "./"
           REMOTE_PATH: "wp-content/plugins/woocommerce-pos"
-          FLAGS: -azvr --inplace --delete --exclude-from='/.distignore'
+          FLAGS: -azvr --inplace --delete --exclude-from='$GITHUB_WORKSPACE/.distignore'
 #          SCRIPT: "path/yourscript.sh"
           CACHE_CLEAR: TRUE
