--- a/.github/workflows/wp-engine.yml
+++ b/.github/workflows/wp-engine.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -29,6 +28,6 @@ jobs:
           # Deploy Options
           SRC_PATH: "./"
           REMOTE_PATH: "wp-content/plugins/woocommerce-pos"
-          FLAGS: -azvr --inplace --delete --exclude-from='$GITHUB_WORKSPACE/.distignore'
-#          SCRIPT: "path/yourscript.sh"
+          FLAGS: -azvr --inplace --delete --exclude-from=$GITHUB_WORKSPACE/.distignore
+          #          SCRIPT: "path/yourscript.sh"
           CACHE_CLEAR: TRUE
