--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -4,10 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - "**.php"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
