--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -6,6 +6,8 @@
 
 	<description>Starting Point Rule Set.</description>
 
+	<config name="installed_paths" value="vendor/phpcompatibility/phpcompatibility-wp/PHPCompatibilityWP,vendor/phpcompatibility/phpcompatibility-paragonie,vendor/phpcompatibility/php-compatibility,vendor/wp-coding-standards/wpcs,vendor/woocommerce/woocommerce-sniffs/src/WooCommerce,vendor/woocommerce/woocommerce-sniffs/src/WooCommerce-Core,vendor/automattic/vipwpcs/WordPressVIPMinimum" />
+
 	<!-- What to scan -->
 	<file>vendor/autoload.php</file>
 	<file>woocommerce-pos.php</file>
