update deploy workflow

--- a/.distignore
+++ b/.distignore
@@ -1,8 +1,11 @@
-*
-!woocommerce-pos.php
-!uninstall.php
-!readme.txt
-!LICENSE
-!include
-!assets
-!templates
+.*
+node_modules
+packages
+tests
+languages
+README.md
+composer.json
+composer.lock
+hookdoc-conf.json
+package.json
+yarn.lock
