--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -5,18 +5,11 @@
     "start": "../../node_modules/.bin/webpack --watch"
   },
   "dependencies": {
-    "@heroicons/react": "2.0.13",
-    "@reach/auto-id": "0.18.0",
-    "@reach/checkbox": "0.18.0",
-    "@reach/combobox": "0.18.0",
-    "@reach/dialog": "0.18.0",
-    "@reach/listbox": "0.18.0",
-    "@reach/portal": "0.18.0",
-    "@reach/tooltip": "0.18.0",
     "@tanstack/react-query": "^4.20.4",
     "@transifex/native": "^5.0.2",
     "@transifex/react": "^5.0.2",
     "@wordpress/api-fetch": "6.20.0",
+    "@wordpress/components": "^23.0.0",
     "@wordpress/element": "5.0.0",
     "@wordpress/url": "3.24.0",
     "classnames": "2.3.2",
@@ -36,11 +29,12 @@
     "@svgr/webpack": "6.5.1",
     "@tanstack/react-query-devtools": "^4.20.4",
     "@transifex/cli": "^5.0.2",
-    "@types/jest": "29.2.4",
+    "@types/jest": "29.2.5",
     "@types/lodash": "4.14.191",
     "@types/react": "18.0.26",
     "@types/react-beautiful-dnd": "13.1.3",
     "@types/react-dom": "18.0.10",
+    "@types/wordpress__components": "^23.0.1",
     "@typescript-eslint/eslint-plugin": "5.47.1",
     "@typescript-eslint/parser": "5.47.1",
     "@wcpos/eslint-config": "*",
