--- a/.github/workflows/wporg-deploy.yml
+++ b/.github/workflows/wporg-deploy.yml
@@ -16,8 +16,9 @@ jobs:
 
       - name: Build
         run: |
-          npm install
-          npm run build
+          yarn install
+          composer install --no-dev
+          yarn build:js
 
       - name: WordPress Plugin Deploy
         id: deploy
@@ -27,6 +28,8 @@ jobs:
         env:
           SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
           SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
+          SLUG: woocommerce-pos
+        continue-on-error: true
 
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
