--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
   "require-dev": {
     "automattic/vipwpcs": "2.3.3",
     "dealerdirect/phpcodesniffer-composer-installer": "v0.7.2",
-    "friendsofphp/php-cs-fixer": "v3.13.1",
+    "friendsofphp/php-cs-fixer": "v3.14.4",
     "phpcompatibility/phpcompatibility-wp": "2.1.4",
-    "sirbrillig/phpcs-variable-analysis": "v2.11.9",
+    "sirbrillig/phpcs-variable-analysis": "v2.11.10",
     "squizlabs/php_codesniffer": "3.7.1",
     "woocommerce/woocommerce-sniffs": "^0.1.3",
     "wp-coding-standards/wpcs": "2.3.0",
@@ -24,10 +24,10 @@
   "require": {
     "php": ">=7.2.0",
     "ext-json": "*",
-    "firebase/php-jwt": "v6.3.2",
-    "ramsey/uuid": "^4.2",
-    "salesforce/handlebars-php": "^3.0",
-    "vlucas/phpdotenv": "^5.5"
+    "firebase/php-jwt": "v6.4.0",
+    "ramsey/uuid": "^4.2.3",
+    "salesforce/handlebars-php": "^3.0.1",
+    "vlucas/phpdotenv": "^v5.5.0"
   },
   "config": {
     "process-timeout": 0,
