--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require-dev": {
     "automattic/vipwpcs": "2.3.3",
     "dealerdirect/phpcodesniffer-composer-installer": "v0.7.2",
-    "friendsofphp/php-cs-fixer": "v3.17.0",
+    "friendsofphp/php-cs-fixer": "v3.3.0",
     "phpcompatibility/phpcompatibility-wp": "2.1.4",
     "sirbrillig/phpcs-variable-analysis": "v2.11.16",
     "squizlabs/php_codesniffer": "3.7.2",
@@ -23,12 +23,15 @@
   },
   "require": {
     "php": ">=7.2",
-    "firebase/php-jwt": "v6.5.0",
+    "firebase/php-jwt": "v6.4.0",
     "ramsey/uuid": "^4.2.3",
     "salesforce/handlebars-php": "^3.0.1",
     "vlucas/phpdotenv": "^v5.5.0"
   },
   "config": {
+    "platform": {
+      "php": "7.2"
+    },
     "platform-check": false,
     "process-timeout": 0,
     "optimize-autoloader": true,
