--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wcpos/settings",
+  "name": "@wcpos/analytics",
   "scripts": {
     "build": "NODE_ENV=production ../../node_modules/.bin/webpack",
     "start": "../../node_modules/.bin/webpack --watch"
@@ -8,14 +8,15 @@
     "@tanstack/react-query": "^4.29.14",
     "@transifex/native": "^5.3.0",
     "@transifex/react": "^5.3.0",
+    "@woocommerce/components": "^12.0.0",
     "@wordpress/api-fetch": "6.32.0",
     "@wordpress/components": "^25.1.0",
     "@wordpress/element": "5.12.0",
+    "@wordpress/hooks": "^3.35.0",
     "@wordpress/url": "3.36.0",
     "classnames": "2.3.2",
     "lodash": "4.17.21",
     "react": "18.2.0",
-    "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.10"
   },
@@ -58,7 +59,6 @@
     "prettier": "2.8.8",
     "sass-loader": "13.3.2",
     "style-loader": "3.3.3",
-    "tailwindcss": "3.3.2",
     "terser-webpack-plugin": "5.3.9",
     "typescript": "5.1.3",
     "webpack": "5.87.0",
