--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -5,7 +5,9 @@
     "start": "../../node_modules/.bin/webpack --watch"
   },
   "dependencies": {
-    "@tanstack/react-query": "^4.29.14",
+    "@headlessui/react": "^1.7.15",
+    "@headlessui/tailwindcss": "^0.1.3",
+    "@tanstack/react-query": "^4.29.15",
     "@transifex/native": "^5.3.0",
     "@transifex/react": "^5.3.0",
     "@wordpress/api-fetch": "6.32.0",
@@ -27,16 +29,16 @@
     "@babel/preset-typescript": "7.22.5",
     "@babel/runtime": "7.22.5",
     "@svgr/webpack": "8.0.1",
-    "@tanstack/react-query-devtools": "^4.29.14",
+    "@tanstack/react-query-devtools": "^4.29.15",
     "@transifex/cli": "^5.3.0",
     "@types/jest": "29.5.2",
     "@types/lodash": "4.14.195",
-    "@types/react": "18.2.12",
+    "@types/react": "18.2.13",
     "@types/react-beautiful-dnd": "13.1.4",
-    "@types/react-dom": "18.2.5",
+    "@types/react-dom": "18.2.6",
     "@types/wordpress__components": "^23.0.1",
-    "@typescript-eslint/eslint-plugin": "5.59.11",
-    "@typescript-eslint/parser": "5.59.11",
+    "@typescript-eslint/eslint-plugin": "5.60.0",
+    "@typescript-eslint/parser": "5.60.0",
     "@wcpos/eslint-config": "*",
     "@wordpress/env": "8.1.1",
     "autoprefixer": "10.4.14",
