--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -60,6 +60,7 @@
     "sass-loader": "13.3.2",
     "style-loader": "3.3.3",
     "terser-webpack-plugin": "5.3.9",
+    "ts-loader": "^9.4.3",
     "typescript": "5.1.3",
     "webpack": "5.87.0",
     "webpack-bundle-analyzer": "^4.9.0",
