--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -62,6 +62,7 @@
     "style-loader": "3.3.3",
     "tailwindcss": "3.3.2",
     "terser-webpack-plugin": "5.3.9",
+    "ts-loader": "^9.4.3",
     "typescript": "5.1.3",
     "webpack": "5.87.0",
     "webpack-bundle-analyzer": "^4.9.0",
