remove edit-product build

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prepare": "husky install",
     "settings": "yarn workspace @wcpos/settings",
     "analytics": "yarn workspace @wcpos/analytics",
-    "build:js": "yarn workspace @wcpos/settings build && yarn workspace @wcpos/edit-product build && yarn workspace @wcpos/analytics build"
+    "build:js": "yarn workspace @wcpos/settings build && yarn workspace @wcpos/analytics build"
   },
   "repository": {
     "type": "git",
