--- a/.github/workflows/wp-engine.yml
+++ b/.github/workflows/wp-engine.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Build
         run: |
-          yarn install
+          YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
           composer install --no-dev
           yarn build:js
 
