--- a/.github/workflows/wporg-deploy.yml
+++ b/.github/workflows/wporg-deploy.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Build
         run: |
-          yarn install
+          YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
           composer install --no-dev
           yarn build:js
 
