--- a/.github/workflows/wp-engine.yml
+++ b/.github/workflows/wp-engine.yml
@@ -14,8 +14,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build
+        env:
+          YARN_ENABLE_IMMUTABLE_INSTALLS: false
         run: |
-          YARN_ENABLE_IMMUTABLE_INSTALLS=false yarn install
+          yarn install
           composer install --no-dev
           yarn build:js
 
