--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "automattic/vipwpcs": "2.3.3",
     "dealerdirect/phpcodesniffer-composer-installer": "v0.7.2",
     "friendsofphp/php-cs-fixer": "v3.3.0",
+    "php-stubs/woocommerce-stubs": "^8.2",
     "phpcompatibility/phpcompatibility-wp": "2.1.4",
     "sirbrillig/phpcs-variable-analysis": "v2.11.16",
     "squizlabs/php_codesniffer": "3.7.2",
