--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build
+        env:
+          YARN_ENABLE_IMMUTABLE_INSTALLS: false
         run: |
           yarn install
           yarn build:docs
