--- a/composer.json
+++ b/composer.json
@@ -10,30 +10,29 @@
     }
   ],
   "require-dev": {
-    "automattic/vipwpcs": "2.3.3",
-    "dealerdirect/phpcodesniffer-composer-installer": "v0.7.2",
-    "friendsofphp/php-cs-fixer": "v3.3.0",
-    "php-stubs/woocommerce-stubs": "^8.2",
+    "dealerdirect/phpcodesniffer-composer-installer": "v1.0.0",
+    "friendsofphp/php-cs-fixer": "v3.35.1",
+    "php-stubs/woocommerce-stubs": "v8.2.0",
     "phpcompatibility/phpcompatibility-wp": "2.1.4",
-    "sirbrillig/phpcs-variable-analysis": "v2.11.16",
+    "sirbrillig/phpcs-variable-analysis": "v2.11.17",
     "squizlabs/php_codesniffer": "3.7.2",
-    "woocommerce/woocommerce-sniffs": "0.1.3",
-    "wp-coding-standards/wpcs": "2.3.0",
-    "wp-phpunit/wp-phpunit": "6.2.0",
-    "yoast/phpunit-polyfills": "^1.0.5"
+    "woocommerce/woocommerce-sniffs": "1.0.0",
+    "wp-coding-standards/wpcs": "3.0.1",
+    "wp-phpunit/wp-phpunit": "6.3.1",
+    "yoast/phpunit-polyfills": "2.0.0"
   },
   "require": {
-    "php": ">=7.2",
+    "php": ">=7.4",
     "ext-json": "*",
-    "firebase/php-jwt": "v6.4.0",
-    "ramsey/uuid": "^4.2.3",
-    "salesforce/handlebars-php": "^3.0.1",
-    "vlucas/phpdotenv": "^v5.5.0",
-    "yahnis-elsts/plugin-update-checker": "^5.1"
+    "firebase/php-jwt": "v6.9.0",
+    "ramsey/uuid": "4.2.3",
+    "salesforce/handlebars-php": "3.0.1",
+    "vlucas/phpdotenv": "v5.5.0",
+    "yahnis-elsts/plugin-update-checker": "v5.2"
   },
   "config": {
     "platform": {
-      "php": "7.2"
+      "php": "7.4"
     },
     "platform-check": false,
     "process-timeout": 0,
