--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "wp": "wp-env run cli wp",
     "lint:php": "composer run lint-report | cs2pr",
     "lint": "run-s lint:*",
+    "pretest": "wp-env start --xdebug=coverage && wp-env run cli --env-cwd='wp-content/plugins/woocommerce-pos' composer install",
     "test:unit:php": "wp-env run --env-cwd='wp-content/plugins/woocommerce-pos' tests-cli 'vendor/bin/phpunit -c .phpunit.xml.dist --verbose --log-junit phpunit.xml'",
     "test:unit": "run-s test:unit:*",
     "test": "run-s test:*",
