--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
     }
   },
   "autoload-dev": {
+    "classmap": ["tests/Tools/CodeHacking"],
     "psr-4": {
       "WCPOS\\WooCommercePOS\\Tests\\": "tests/includes/"
     }
