--- a/.editorconfig
+++ b/.editorconfig
@@ -17,8 +17,8 @@ indent_style = tab
 indent_size = 4
 
 [{*.ts, *.tsx, .jshintrc, *.json, *.yml}]
-indent_style = space
-indent_size = 2
+indent_style = tab
+indent_size = 4
 
 [{*.txt, wp-config-sample.php}]
 end_of_line = crlf
