--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   "require": {
     "php": ">=7.4",
     "ext-json": "*",
+    "erusev/parsedown": "^1.7",
     "ramsey/uuid": "^4.2",
     "salesforce/handlebars-php": "3.0.1"
   },
@@ -47,7 +48,7 @@
     "fix": "php-cs-fixer fix .",
     "prefix-dependencies": [
       "@composer --working-dir=php-scoper install",
-      "php-scoper/vendor/bin/php-scoper add-prefix --config=php-scoper/config.php --output-dir=./vendor_prefixed --force",
+      "cd php-scoper && vendor/bin/php-scoper --output-dir=../vendor_prefixed add-prefix --force && cd ..",
       "@composer dump-autoload -o -a"
     ]
   },
@@ -56,8 +57,7 @@
       "WCPOS\\WooCommercePOS\\": "includes/"   
     },
     "classmap": [
-      "vendor_prefixed/firebase/php-jwt/src",
-      "vendor_prefixed/yahnis-elsts/plugin-update-checker"
+      "vendor_prefixed/vendor/firebase/php-jwt/src"
     ]
   },
   "autoload-dev": {
