--- a/php-scoper/composer.json
+++ b/php-scoper/composer.json
@@ -1,15 +1,11 @@
 {
   "require-dev": {
-    "humbug/php-scoper": "0.13.10"
+    "humbug/php-scoper": "0.16.2"
   },
 	"require": {
     "php": ">=7.4",
     "ext-json": "*",
-    "firebase/php-jwt": "v6.9.0",
-    "ramsey/uuid": "4.2.3",
-    "salesforce/handlebars-php": "3.0.1",
-    "vlucas/phpdotenv": "v5.5.0",
-    "yahnis-elsts/plugin-update-checker": "v5.2"
+    "firebase/php-jwt": "v6.9.0"
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -21,3 +17,4 @@
     "sort-packages": true
   }
 }
+
