--- a/.github/workflows/update-pot.yml
+++ b/.github/workflows/update-pot.yml
@@ -28,23 +28,16 @@ jobs:
       - name: Update POT file
         run: wp i18n make-pot . languages/woocommerce-pos.pot --domain=woocommerce-pos --slug=woocommerce-pos --package-name="WooCommerce POS" --headers="{\"Report-Msgid-Bugs-To\":\"https://github.com/wcpos/woocommerce-pos/issues\"}"
 
+      - name: Check for changes
+        id: git-diff
+        run: |
+          git diff --exit-code || echo "::set-output name=changes::true"
+
       - name: Commit updated POT file
+        if: steps.git-diff.outputs.changes == 'true'
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'chore(l10n): update languages/woocommerce-pos.pot'
           file_pattern: '*.pot'
-          push_options: '--dry-run' # We just want to check the diff first
-
-      - name: Check git diff
-        uses: technote-space/get-diff-action@v6
-        with:
-          SET_ENV_NAME_COUNT: 'FILE_COUNT'
-          SET_ENV_NAME_LINES: 'LINE_COUNT'
-          PATTERNS: |
-            '*.pot'
-
-      - name: Commit updated POT file
-        if: env.FILE_COUNT != env.LINE_COUNT
-        uses: stefanzweifel/git-auto-commit-action@v4
 
 
