update .pot workflow

--- a/.github/workflows/update-pot.yml
+++ b/.github/workflows/update-pot.yml
@@ -38,6 +38,8 @@ jobs:
           tail -n +16 old.pot > old-trimmed.pot
       
           # Compare the trimmed files
+          diff --version
+          diff --help
           diff --exit-code old-trimmed.pot new-trimmed.pot || echo "::set-output name=changes::true"
       
           # Clean up temporary files
