--- a/.github/workflows/update-pot.yml
+++ b/.github/workflows/update-pot.yml
@@ -38,9 +38,11 @@ jobs:
           tail -n +16 old.pot > old-trimmed.pot
       
           # Compare the trimmed files
-          diff --version
-          diff --help
-          diff --exit-code old-trimmed.pot new-trimmed.pot || echo "::set-output name=changes::true"
+          if diff old-trimmed.pot new-trimmed.pot; then
+            echo "No changes detected."
+          else
+            echo "::set-output name=changes::true"
+          fi
       
           # Clean up temporary files
           rm old.pot new-trimmed.pot old-trimmed.pot
