update assets workflow

--- a/.github/workflows/sync-wporg-assets.yml
+++ b/.github/workflows/sync-wporg-assets.yml
@@ -2,6 +2,9 @@ name: Sync assets with wordpress.org
 
 on:
   push:
+    paths:
+      - 'readme.txt'
+      - '.wordpress-org/**'
 
 jobs:
   run:
@@ -12,5 +15,7 @@ jobs:
         - name: WordPress.org plugin asset/readme update
           uses: 10up/action-wordpress-plugin-asset-update@stable
           env:
+            SLUG: woocommerce-pos
+            IGNORE_OTHER_FILES: true
             SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
             SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
