--- a/.github/workflows/sync-wporg-assets.yml
+++ b/.github/workflows/sync-wporg-assets.yml
@@ -1,10 +1,7 @@
 name: Sync assets with wordpress.org
 
 on:
-  push:
-    paths:
-      - 'readme.txt'
-      - '.wordpress-org/**'
+  workflow_dispatch:
 
 jobs:
   run:
