--- a/package.json
+++ b/package.json
@@ -15,16 +15,10 @@
     "cli": "wp-env run cli",
     "wp": "wp-env run cli wp",
     "lint:php": "composer run lint-report | cs2pr",
-    "lint": "run-s lint:*",
+    "test": "pnpm run test:unit:php",
     "pretest": "wp-env start --xdebug=coverage && wp-env run cli --env-cwd='wp-content/plugins/woocommerce-pos' composer install",
     "test:unit:php": "wp-env run cli -- wp plugin activate woocommerce && wp-env run --env-cwd='wp-content/plugins/woocommerce-pos' tests-cli -- vendor/bin/phpunit -c .phpunit.xml.dist --verbose --log-junit phpunit.xml",
-    "test:unit": "run-s test:unit:*",
-    "test": "run-s test:*",
-    "build:docs": "jsdoc -c hookdoc-conf.json",
-    "prepare": "husky install",
-    "settings": "yarn workspace @wcpos/settings",
-    "analytics": "yarn workspace @wcpos/analytics",
-    "build:js": "yarn workspace @wcpos/settings build && yarn workspace @wcpos/analytics build"
+    "build:docs": "jsdoc -c hookdoc-conf.json"
   },
   "repository": {
     "type": "git",
@@ -45,14 +39,9 @@
   "devDependencies": {
     "@wordpress/babel-plugin-makepot": "6.0.0",
     "@wordpress/env": "10.0.0",
-    "husky": "9.0.11",
     "jsdoc": "^4.0.3",
-    "npm-run-all": "4.1.5",
-    "taffydb": "^2.7.3",
+    "turbo": "2.4.4",
     "wp-hookdoc": "0.2.0"
   },
-  "packageManager": "yarn@3.2.1",
-  "eslintConfig": {
-    "extends": "@wcpos/eslint-config"
-  }
+  "packageManager": "pnpm@10.4.1"
 }
