--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -39,7 +39,6 @@
     "@types/wordpress__components": "^23.8.0",
     "@typescript-eslint/eslint-plugin": "7.13.0",
     "@typescript-eslint/parser": "7.13.0",
-    "@wcpos/eslint-config": "*",
     "@wordpress/env": "10.0.0",
     "autoprefixer": "10.4.19",
     "babel-loader": "9.1.3",
@@ -70,8 +69,5 @@
     "webpack-livereload-plugin": "3.0.2",
     "wp-hookdoc": "0.2.0"
   },
-  "packageManager": "yarn@3.2.1",
-  "eslintConfig": {
-    "extends": "@wcpos/eslint-config"
-  }
+  "packageManager": "pnpm@10.4.1"
 }
